# aops-ceres

./: README.en.md  README.md  aops-ceres.service  aops-ceres.spec  requirements.txt  setup.py
ceres/: __main__.py  command.py  main.py
ceres/cli/: __init__.py  apollo.py  base.py  collect.py  plugin.py  ragdoll.py  register.py
ceres/conf/: __init__.py  constant.py  default_config.py
ceres/controllers/: agent_controller.py  collect_controller.py  (+2 more)
conf/: ceres.conf  register_example.json
da-tool/: README.md
extra-tools/da-tool/: CMakeLists.txt  README.md  main.cpp
extra-tools/da-tool/analysis/: config.cpp  config.h  function_stack.cpp  function_stack.h  sched_analysis.cpp  sched_analysis.h  time_pair.cpp  time_pair.h  trace_resolve.cpp  trace_resolve.h
extra-tools/da-tool/conf/: da-tool.conf
extra-tools/da-tool/script/: da-tool.sh
extra-tools/da-tool/test/case/case1/: case1.cpp
extra-tools/da-tool/test/case/case2/: case2_udp_cli.c  case2_udp_ser_noblk.c
extra-tools/da-tool/test/case/case3/: case3.cpp
extra-tools/da-tool/test/case/case4/: case4_udp_cli.c  case4_udp_ser_blk.c
extra-tools/da-tool/test/case/case5/: case5_udp_cli.c  case5_udp_ser.c
extra-tools/da-tool/test/config_check/: config_check.sh  config_test1.conf  config_test2.conf  config_test3.conf  config_test4.conf  config_test6.conf  config_test7.conf
extra-tools/da-tool/test/opt_test/: opt_test.sh
hotpatch/: advisory.py  baseclass.py  cve.py  hot_updateinfo.py  hotpatch.py  hotupgrade.py  syscare.py  test_hotpatch.py  updateinfo_parse.py  upgrade_en.py  version.py
(+60 files in other folders)
